tests/e2e/negative/n0007_undefined_type.cryo
// @test: undefined_type
// @expect: compile_fail
// @mode: raw
// @description: Using undefined type should fail
// @tags: types, errors

namespace NegUndefType;

function main() -> int {
    const x: FooBarType = 5;
    return 0;
}
